--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,6 +1,7 @@
 @font-face {
     font-family: 'Troubleside';
     src: url('/fonts/Troubleside.ttf');
+    font-display: swap;
 }
 
 :root {
